# nautilus_newlib

./: README.md  build.sh  changes.md  clean.sh  config.sh  missing.md  missing.out
nautilus/: 0001-Port-of-Boehm-Demers-Weiser-conservative-garbage-col.patch  0001-Temporary-patch-for-kgdb.patch  0002-Add-counting-barriers.patch  0003-Add-world-stop-capability-to-scheduler.patch  0004-Deeper-integration-of-optional-garbage-collection-pl.patch  0005-Scheduler-bugfix-and-addition-of-granularity-minimum.patch  0006-Bug-fixes-for-world-stop.patch  0007-Allow-creation-of-new-shell-from-virtual-console-lis.patch  0008-Fix-potential-add-after-delete-list-bug-in-buddy-all.patch  0009-kmem-and-boot-allocator-extensions-to-support-intern.patch  0010-Add-the-Pretty-Damn-Simple-Garbage-Collector-PDSGC-f.patch  Kconfig  Makefile  diff.out  foo.txt  gdb  make.out
nautilus/include/: autoconf.h  cscope.out
nautilus/include/config/: newlib.h
nautilus/include/dev/: nvram.h  serial.h
nautilus/include/nautilus/: fs.h  gdb-stub.h  libccompat.h  naut_string.h  printk.h
nautilus/include/test/: newlib_fs.h
nautilus/scripts/basic/: docproc  fixdep  split-include
nautilus/scripts/kconfig/: conf  mconf
nautilus/src/asm/: setjmp_low.S
nautilus/src/dev/: Kconfig  Makefile  nvram.c  ps2.c  serial.c
nautilus/src/nautilus/: Makefile  fs.c  (+7 more)
newlib/: README.md
newlib/src/: Makefile  config.sub  configure
newlib/src/newlib/libc/sys/nautilus/: Makefile.am  Makefile.in  clocks.c  configure  configure.in  crt0.c  foo.txt  fs.c  getentropy.c  posix_memalign.c  spinlock.c  syscalls.c
(+148 files in other folders)
